RESOLVED FIXED135710
[EME][Mac] Error codes returned by AVSampleBufferDisplayLayer are negative; clip when passed to JavaScript as doubles.
https://bugs.webkit.org/show_bug.cgi?id=135710
Summary [EME][Mac] Error codes returned by AVSampleBufferDisplayLayer are negative; c...
Jer Noble
Reported 2014-08-07 13:05:44 PDT
[EME][Mac] Error codes returned by AVSampleBufferDisplayLayer are negative; clip when passed to JavaScript as doubles.
Attachments
Patch (2.26 KB, patch)
2014-08-07 13:10 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2014-08-07 13:10:40 PDT
Radar WebKit Bug Importer
Comment 2 2014-08-07 13:12:07 PDT
Brent Fulgham
Comment 3 2014-08-07 14:50:37 PDT
Comment on attachment 236210 [details] Patch r=me.
WebKit Commit Bot
Comment 4 2014-08-07 15:18:07 PDT
Comment on attachment 236210 [details] Patch Clearing flags on attachment: 236210 Committed r172287: <http://trac.webkit.org/changeset/172287>
WebKit Commit Bot
Comment 5 2014-08-07 15:18:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.