[EME][Mac] Error codes returned by AVSampleBufferDisplayLayer are negative; clip when passed to JavaScript as doubles. https://bugs.webkit.org/show_bug.cgi?id=135710

Reviewed by Brent Fulgham.

Return the absolute value of the error codes returned by AVSampleBufferDisplayLayer, so that the conversion from
unsigned -> double does not clip due to the (converted) value being greater than 2^53.

* platform/graphics/avfoundation/objc/CDMSessionMediaSourceAVFObjC.mm:
(WebCore::CDMSessionMediaSourceAVFObjC::layerDidReceiveError):
(WebCore::CDMSessionMediaSourceAVFObjC::rendererDidReceiveError):


Canonical link: https://commits.webkit.org/153603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172287 268f45cc-cd09-0410-ab3c-d52691b4dbfc